# swift-c-interop

./: .gitignore  README.md  meson.build
libraryx/: libraryx.cpp  libraryx.h  meson.build  module.modulemap
source/: main.swift  other.swift
